--- a/Resources/assets/styles.css
+++ b/Resources/assets/styles.css
@@ -41,3 +41,9 @@ element.style {
     font-family: 'sans-serif';
     text-align: center;
     }
+
+iframe {
+    position: relative;
+    width: 24%;
+    height: 22vh;
+  }
